OO-7839: Fix layout problem with user details toggle box

--- a/src/main/webapp/static/themes/light/modules/_user.scss
+++ b/src/main/webapp/static/themes/light/modules/_user.scss
@@ -157,6 +157,13 @@
 
 
 /* User infos */
+
+.o_togglebox_content {
+	> .o_user_infos {
+		padding-right: 20px;	
+	}
+}
+
 .o_user_infos {
 	position:relative;
 	min-height:100px;
